@@ -1,3 +1,9 @@
+2024-08-24  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll micro version and date
+
+	* R/pkgKitten.R: Fill in 'Authors@R', omit Author, Maintainer
+
 2024-05-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* README.md: Use tinyverse.netlify.app for dependency badge
